# monologue

./: .gitignore  Dockerfile  PrepareTaxiData.ipynb  README.md  Sample.ipynb  VectorStores.ipynb  cli.py  pyproject.toml
dataset/: example_log_output.txt  ft_characters.feather
docs/: README.md  SUMMARY.md  Sample.ipynb  Sample.md  Sample.py
docs/datasets/: GeneratedDaset.ipynb  GeneratedDataset.ipynb  PrepareAdventureWorks.ipynb  PrepareTaxiData.ipynb  PrepareTaxiData.py
docs/notebooks/: Sample.ipynb
docs/notebooks/datasets/: FairyTales.ipynb  GeneratedDataset.ipynb
docs/notebooks/spaces/: AtTheHelm.ipynb
docs/notebooks/stores/: VectorStores.ipynb
docs/stores/: VectorStores.ipynb  VectorStores.py  columnar-store.md  columnar.md  overview.md
k8s/infra/loki/: values.yaml
k8s/workflows/: pod.yaml
monologue/: __init__.py  cli.py
monologue/core/agents/: Dialogue.py  __init__.py  basic.py  monitoring.py  utils.py
monologue/core/agents/prompts/: __init__.py  basic.py
monologue/core/clients/: DuckDBClient.py  LanceDBClient.py  S3Client.py  __init__.py
monologue/core/data/: __init__.py  io.py
monologue/core/data/clients/: DuckDBClient.py  (+4 more)
monologue/core/spaces/: AbstactSpace.py  Exchange.py  IndexManager.py  LogProcessor.py  Schema.py  SpaceManager.py  SpaceSubscription.py  __init__.py
monologue/core/stores/: ColumnarStore.py  VectorStore.py
monologue/core/utils/: ops.py
monologue/entities/: AbstractEntity.py  __init__.py
monologue/entities/examples/: MyriadExamples.py  MyriadLoggers.py  __init__.py
test/sample_data/: test_loki.json
(+8 files in other folders)
