[tool.poetry]
name = "monologue"
version = "0.1.0"
description = "an interface for logging to RAG systems"
authors = ["resonating-sirsh <amartey@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.0"
duckdb = "^0.7.1"
lancedb = "^0.2.0"
langchain = "^0.0.309"
llama_index = "^0.8.38"
loguru = "^0.7.0"
numpy = "^1.23.5"
pandas = "^1.5.3"
polars = "0.18.0"
pyarrow = "^10.0.1"
pydantic = "^1.10.9"
redis = "^4.5.4"
Requests = "^2.31.0"
s3fs = "^0.4.2"
typer = "^0.9.0"
Wikipedia_API = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
monologue = "monologue.cli:app"